syntax = "proto3";

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (AuthResponse);
  rpc Logout (LogoutRequest) returns (Empty);
  rpc UserExists (UserExistsRequest) returns (UserExistsResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message UserExistsRequest {
  string userId = 1;
}

message UserExistsResponse {
  bool exists = 1;
}

message Empty {}
